--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  google_fonts: ^2.0.0  # Adicionado o pacote google_fonts
+  google_fonts: ^6.0.0  # Adicionado o pacote google_fonts
 
 dev_dependencies:
   flutter_test:
@@ -21,4 +21,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - lib/images/
+    - assets/images/
